--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -3,6 +3,26 @@
 
 {% block main %}
 
-    <p>Lorem ipsum dolor sit amet.</p>
+    <div class="container">
+
+        <div class="row">
+            <div class="col">
+            
+                <h1>Prototyp</h1>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+            
+                <h2>Przedmioty</h2>
+                <ul>
+                    <li><a href="{{ globals.sitemap["cards-items-equipment"] }}">Ekwipunek</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
