--- a/sources/sass/utils/_variables.scss
+++ b/sources/sass/utils/_variables.scss
@@ -1,2 +1,5 @@
 $color-white: #fff;
 $color-black: #000;
+
+$font-default-serif: 'EB Garamond', serif;
+$font-default-sans-serif: 'Signika', sans-serif;
