deck and card prototypes and equipment

--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -8,3 +8,6 @@
 @import './base/common';
 @import './base/grid';
 @import './base/bodytext';
+
+@import './components/deck';
+@import './components/card';
