--- a/sources/templates/cards-items-equipment.twig
+++ b/sources/templates/cards-items-equipment.twig
@@ -3,6 +3,9 @@
 
 {% block main %}
 
-    <h1>Przedmioty - Ekwipunek</h1>
+    <div class="container">
+        <h1>Przedmioty - Ekwipunek</h1>
+        <div class="deck" data-module="items-equipment"></div>
+    </div>
 
 {% endblock %}
