--- a/sources/sass/utils/_variables.scss
+++ b/sources/sass/utils/_variables.scss
@@ -1,5 +1,7 @@
 $color-white: #fff;
 $color-black: #000;
 
-$font-default-serif: 'EB Garamond', serif;
-$font-default-sans-serif: 'Signika', sans-serif;
+$color-gallery-gray: #eee;
+
+$font-default-serif: 'Merriweather', serif;
+$font-default-sans-serif: 'Ubuntu', sans-serif;
