--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -9,5 +9,6 @@
 @import './base/grid';
 @import './base/bodytext';
 
+@import './components/fake-font-preload';
 @import './components/deck';
 @import './components/card';
