--- a/sources/templates/cards-items-potions.twig
+++ b/sources/templates/cards-items-potions.twig
@@ -1,11 +1,11 @@
 {% extends '/master/default.twig' %}
-{% set subtitle = "Przedmioty - Ekwipunek" %}
+{% set subtitle = "Przedmioty - Eliksiry" %}
 
 {% block main %}
 
     <div class="container">
         <h1>{{ subtitle }}</h1>
-        <div class="deck" data-module="items-equipment"></div>
+        <div class="deck" data-module="items-potions"></div>
     </div>
 
 {% endblock %}
