--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -19,6 +19,8 @@
                 <h2>Przedmioty</h2>
                 <ul>
                     <li><a href="{{ globals.sitemap["cards-items-equipment"] }}">Ekwipunek</a></li>
+                    <li><a href="{{ globals.sitemap["cards-items-books"] }}">Księgi</a></li>
+                    <li><a href="{{ globals.sitemap["cards-items-potions"] }}">Eliksiry</a></li>
                 </ul>
 
             </div>
