--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -16,11 +16,31 @@
         <div class="row">
             <div class="col">
             
+                <h2>Wydarzenia</h2>
+                <ul>
+                    <li><a href="{{ globals.sitemap["events-local"] }}">Wydarzenia lokalne</a></li>
+                    <li><a href="{{ globals.sitemap["events-global"] }}">Wydarzenia globalne</a></li>
+                    <li><a href="{{ globals.sitemap["events-clue"] }}">Poszlaki</a></li>
+                </ul>
+
+            </div>
+            <div class="col">
+            
                 <h2>Przedmioty</h2>
                 <ul>
                     <li><a href="{{ globals.sitemap["cards-items-equipment"] }}">Ekwipunek</a></li>
                     <li><a href="{{ globals.sitemap["cards-items-books"] }}">Księgi</a></li>
                     <li><a href="{{ globals.sitemap["cards-items-potions"] }}">Eliksiry</a></li>
+                </ul>
+
+            </div>
+            <div class="col">
+            
+                <h2>Zaklęcia</h2>
+                <ul>
+                    <li><a href="{{ globals.sitemap["spells-offensive"] }}">Zaklęcia bojowe</a></li>
+                    <li><a href="{{ globals.sitemap["spells-support"] }}">Zaklęcia wspomagające</a></li>
+                    <li><a href="{{ globals.sitemap["spells-individual"] }}">Zaklęcia indywidualne</a></li>
                 </ul>
 
             </div>
