--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -209,6 +209,12 @@
             height: 20px;
             margin: 1px 2px;
         }
+        &-index {
+            display: inline-block;
+            width: 12px;
+            height: 12px;
+            margin: 1px 2px 0 -2px;
+        }
         &-text {
             display: inline-block;
             font-size: 12px;
