playable ui init

--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -16,6 +16,15 @@
         <div class="row">
             <div class="col">
             
+                <h2>Dashboard</h2>
+                <p><a href="{{ globals.sitemap["dashboard"] }}">Przejdź do dashboardu</a></p>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+            
                 <h2>Wydarzenia</h2>
                 <ul>
                     <li><a href="{{ globals.sitemap["events-local"] }}">Wydarzenia lokalne</a></li>
