--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -7,6 +7,11 @@
     padding: 8px 8px 0;
     border: 2px solid $color-black;
     border-radius: 6px;
+    background-color: $color-white;
+
+    .dark-theme & {
+        border-color: $color-gray;
+    }
 
     .region {
         position: relative;
