--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="{{ globals.sitemap["events-local"] }}">Wydarzenia lokalne</a></li>
                     <li><a href="{{ globals.sitemap["events-global"] }}">Wydarzenia globalne</a></li>
-                    <li><a href="{{ globals.sitemap["events-clue"] }}">Poszlaki</a></li>
+                    <li><a href="{{ globals.sitemap["traces"] }}">Poszlaki</a></li>
                 </ul>
 
             </div>
