--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -167,6 +167,38 @@
                 text-align: center;
             }
         }
+        &.trace-order {
+            position: relative;
+            padding-left: 20px;
+            &.trace-order--progressive {
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 0.5em;
+                    bottom: -6px;
+                    left: 0.4em;
+                    width: 0;
+                    border-left: 2px dashed $color-black;
+                    z-index: 1;
+                }
+                &.trace-order--last {
+                    &::after {
+                        content: none;
+                    }
+                }
+            }
+        }
+        .trace-pointer {
+            position: absolute;
+            top: 0.2em;
+            left: 0;
+            width: 1em;
+            height: 1em;
+            border: 2px solid $color-black;
+            border-radius: 50%;
+            background-color: $color-white;
+            z-index: 2;
+        }
     }
     .cover {
         position: relative;
