--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -10,6 +10,8 @@
 @import './base/bodytext';
 
 @import './components/fake-font-preload';
+@import './components/resizer';
+@import './components/dashboard';
 @import './components/deck';
 @import './components/card';
 @import './components/ui';
