--- a/sources/templates/dashboard.twig
+++ b/sources/templates/dashboard.twig
@@ -6,7 +6,12 @@
 {% block main %}
 
     <div class="container container--fluid">
-        <div class="deck playable" data-module="items-potions"></div>
+        <div class="dashboard">
+            <div class="deck playable" data-module="events-global"></div>
+            <div class="deck playable" data-module="events-local"></div>
+            <div class="deck playable" data-module="traces"></div>
+            <div class="deck playable" data-module="traces"></div>
+        </div>
     </div>
 
 {% endblock %}
