--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -54,6 +54,26 @@
 
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+            
+                <h2>Inne</h2>
+                <ul>
+                    <li><a href="{{ globals.sitemap["locations"] }}">Lokacje</a></li>
+                    <li><a href="{{ globals.sitemap["search"] }}">Przeszukiwanie</a></li>
+                    <li><a href="{{ globals.sitemap["search-gold"] }}">Przeszukiwanie - złota kategoria</a></li>
+                    <li><a href="{{ globals.sitemap["search-silver"] }}">Przeszukiwanie - srebrna kategoria</a></li>
+                    <li><a href="{{ globals.sitemap["search-bronze"] }}">Przeszukiwanie - brązowa kategoria</a></li>
+                </ul>
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
     </div>
 
 {% endblock %}
