--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -275,6 +275,21 @@
     }
 
     &.mod {
+        &--back {
+            background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc4JyBoZWlnaHQ9JzgnPgogIDxyZWN0IHdpZHRoPSc4JyBoZWlnaHQ9JzgnIGZpbGw9JyNmZmYnLz4KICA8cGF0aCBkPSdNMCAwTDggOFpNOCAwTDAgOFonIHN0cm9rZS13aWR0aD0nMC41JyBzdHJva2U9JyNhYWEnLz4KPC9zdmc+Cg==');
+            background-repeat: repeat;
+            .back-icon {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                margin: auto;
+                width: 8rem;
+                height: 8rem;
+                mix-blend-mode: multiply;
+            }
+        }
         &--middle {
             .text-node {
                 &.description {
