--- a/sources/templates/dashboard.twig
+++ b/sources/templates/dashboard.twig
@@ -12,6 +12,13 @@
             <div class="deck playable" data-module="traces"></div>
             <div class="deck playable" data-module="traces"></div>
         </div>
+        <div class="dashboard">
+            <div class="deck playable" data-module="locations"></div>
+            <div class="deck playable" data-module="search"></div>
+            <div class="deck playable" data-module="search-bronze"></div>
+            <div class="deck playable" data-module="search-silver"></div>
+            <div class="deck playable" data-module="search-gold"></div>
+        </div>
     </div>
 
 {% endblock %}
