--- a/sources/templates/dashboard.twig
+++ b/sources/templates/dashboard.twig
@@ -7,17 +7,17 @@
 
     <div class="container container--fluid">
         <div class="dashboard">
-            <div class="deck playable" data-module="events-global"></div>
-            <div class="deck playable" data-module="events-local"></div>
-            <div class="deck playable" data-module="traces"></div>
-            <div class="deck playable" data-module="traces"></div>
+            <div class="deck playable" data-module="events-global" data-title="Wydarzenia globalne"></div>
+            <div class="deck playable" data-module="events-local" data-title="Wydarzenia lokalne"></div>
+            <div class="deck playable" data-module="traces" data-title="Poszlaki"></div>
+            <div class="deck playable" data-module="traces" data-title="Poszlaki"></div>
         </div>
         <div class="dashboard">
-            <div class="deck playable" data-module="locations"></div>
-            <div class="deck playable" data-module="search"></div>
-            <div class="deck playable" data-module="search-bronze"></div>
-            <div class="deck playable" data-module="search-silver"></div>
-            <div class="deck playable" data-module="search-gold"></div>
+            <div class="deck playable" data-module="locations" data-title="Lokacje"></div>
+            <div class="deck playable" data-module="search" data-title="Przeszukiwanie"></div>
+            <div class="deck playable" data-module="search-bronze" data-title="Przeszukiwanie - brąz"></div>
+            <div class="deck playable" data-module="search-silver" data-title="Przeszukiwanie - srebro"></div>
+            <div class="deck playable" data-module="search-gold" data-title="Przeszukiwanie - złoto"></div>
         </div>
     </div>
 
