--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -40,6 +40,7 @@
                     <li><a href="{{ globals.sitemap["cards-items-equipment"] }}">Ekwipunek</a></li>
                     <li><a href="{{ globals.sitemap["cards-items-books"] }}">Księgi</a></li>
                     <li><a href="{{ globals.sitemap["cards-items-potions"] }}">Eliksiry</a></li>
+                    <li><a href="{{ globals.sitemap["cards-items-special"] }}">Specjalne</a></li>
                 </ul>
 
             </div>
