--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -25,6 +25,14 @@
         <div class="row">
             <div class="col">
             
+                <h2>Postaci</h2>
+                <ul>
+                    <li><a href="{{ globals.sitemap["npc"] }}">Postaci niezależne</a></li>
+                </ul>
+
+            </div>
+            <div class="col">
+            
                 <h2>Wydarzenia</h2>
                 <ul>
                     <li><a href="{{ globals.sitemap["events-local"] }}">Wydarzenia lokalne</a></li>
@@ -44,6 +52,8 @@
                 </ul>
 
             </div>
+        </div>
+        <div class="row">
             <div class="col">
             
                 <h2>Zaklęcia</h2>
@@ -54,8 +64,6 @@
                 </ul>
 
             </div>
-        </div>
-        <div class="row">
             <div class="col">
             
                 <h2>Inne</h2>
@@ -66,9 +74,6 @@
                     <li><a href="{{ globals.sitemap["search-silver"] }}">Przeszukiwanie - srebrna kategoria</a></li>
                     <li><a href="{{ globals.sitemap["search-bronze"] }}">Przeszukiwanie - brązowa kategoria</a></li>
                 </ul>
-
-            </div>
-            <div class="col">
 
             </div>
             <div class="col">
