--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -276,12 +276,28 @@
             height: 1.2rem;
             margin: 0.1rem 0.2rem 0 -0.2rem;
         }
+        &-addition {
+            &-symbol {
+                margin: 0 0.1rem 0 0.3rem;
+                display: inline-block;
+                font-size: 1.2rem;
+                font-weight: bold;
+                line-height: 2.2rem; 
+            }
+            &-image {
+                position: relative;
+                display: inline-block;
+                width: 1.6rem;
+                height: 1.6rem;
+                margin: 0.3rem 0.2rem 0 0;
+            }
+        }
         &-text {
+            margin: 0 0.2rem 0 0;
             display: inline-block;
             font-size: 1.2rem;
             font-weight: bold;
             line-height: 2.2rem;
-            margin: 0 0.2rem 0 0;
             &:first-child {
                 margin-left: 0.2rem;
             }
