--- a/sources/sass/base/_bodytext.scss
+++ b/sources/sass/base/_bodytext.scss
@@ -10,6 +10,9 @@ h4,
 h5 {
     margin: 20px 0;
     font-family: $font-default-serif;
+    @media print {
+        display: none;
+    }
 }
 
 h1 {
