--- a/sources/sass/components/_resizer.scss
+++ b/sources/sass/components/_resizer.scss
@@ -6,6 +6,9 @@
     border-left: 1px solid $color-black;
     border-bottom: 1px solid $color-black;
     border-radius: 0 0 0 4px;
+    @media print {
+        display: none;
+    }
     &-icon {
         position: relative;
         display: block;
