--- a/sources/sass/utils/_variables.scss
+++ b/sources/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $color-gray: #808080;
 $color-black: #000;
 
 $color-gallery-gray: #eee;
+$color-silver-gray: #c8c8c8;
 
 $font-default-serif: 'Merriweather', serif;
 $font-default-sans-serif: 'Ubuntu', sans-serif;
