--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -27,6 +27,7 @@
             
                 <h2>Postaci</h2>
                 <ul>
+                    <li><a href="{{ globals.sitemap["heroes"] }}">Bohaterowie</a></li>
                     <li><a href="{{ globals.sitemap["npc"] }}">Postaci niezależne</a></li>
                 </ul>
 
