--- a/sources/sass/components/_card.scss
+++ b/sources/sass/components/_card.scss
@@ -123,7 +123,8 @@
             }
             &-content {
                 flex-grow: 1;
-                overflow: auto;
+                overflow-x: hidden;
+                overflow-y: auto;
                 @media print {
                     overflow: hidden;
                 }
