--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -14,4 +14,5 @@
 @import './components/dashboard';
 @import './components/deck';
 @import './components/card';
+@import './components/hero';
 @import './components/ui';
