--- a/sources/sass/utils/_variables.scss
+++ b/sources/sass/utils/_variables.scss
@@ -5,5 +5,5 @@ $color-black: #000;
 $color-gallery-gray: #eee;
 $color-silver-gray: #c8c8c8;
 
-$font-default-serif: 'Merriweather', serif;
+$font-default-serif: 'Noto Serif', serif;
 $font-default-sans-serif: 'Ubuntu', sans-serif;
