--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -15,4 +15,5 @@
 @import './components/deck';
 @import './components/card';
 @import './components/hero';
+@import './components/board';
 @import './components/ui';
