--- a/sources/templates/index.twig
+++ b/sources/templates/index.twig
@@ -70,6 +70,7 @@
                 <h2>Inne</h2>
                 <ul>
                     <li><a href="{{ globals.sitemap["locations"] }}">Lokacje</a></li>
+                    <li><a href="{{ globals.sitemap["board"] }}">Lokacje na planszy</a></li>
                     <li><a href="{{ globals.sitemap["search"] }}">Przeszukiwanie</a></li>
                     <li><a href="{{ globals.sitemap["search-gold"] }}">Przeszukiwanie - złota kategoria</a></li>
                     <li><a href="{{ globals.sitemap["search-silver"] }}">Przeszukiwanie - srebrna kategoria</a></li>
